--- a/www/index.html
+++ b/www/index.html
@@ -64,14 +64,14 @@
 		</div>
 		<form method="post">
 			<fieldset class="ui-field-contain">
-				<input type="text" name="num1" id="num1">
+				<input type="number" name="num1" id="num1">
 				<select name="operand" id="operand">
 					<option value="+">+</option>
 					<option value="-">-</option>
 					<option value="*">*</option>
 					<option value="/">/</option>
 				</select>
-				<input type="text" name="num2" id="num2">
+				<input type="number" name="num2" id="num2">
 			</fieldset>
 		</form>
 		<div>
@@ -124,7 +124,7 @@
 	</div>
 	<div data-role="page" id="helpop" data-dialog="true" data-theme="a">
 		<div data-role="header">
-			<h1>More Inf<o/h1>
+			<h1>More Info</h1>
 		</div>
 		<div>
 			<p>You have requested more information about the App!</p>
